@@ -6,7 +6,7 @@
 <description>Create ePub 3 from valid ePub2 with extensions</description>
 <engine>python3.4</engine>
 <engine>python2.7</engine>
-<version>0.4.0</version>
+<version>0.4.1</version>
 <autostart>true</autostart>
 <oslist>osx,win,unx</oslist>
 </plugin>
