@@ -1,5 +1,6 @@
-pre-v041
+v041
   - fix typo that caused bug when creating nav from ncx
+  - convert illegal in epub3 big tags to span tags with inline styles 
 
 v040
   - recognize and convert calibre:title_sort to its epub3 equivalent
